# xmlforge

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: index.md  installation.md
examples/: README.md  basic_parsing.py  namespace_example.py  validation_example.py
src/xmlforge/: __init__.py  dataframe.py  parser.py  splitter.py  transformer.py  validator.py
tests/: __init__.py  test_parser.py  test_splitter.py  test_transformer.py  test_validator.py
